--- a/css/style.css
+++ b/css/style.css
@@ -214,10 +214,6 @@
     background-color: #9178e4;
 }
 
-#btn2:hover {
-    background-color: #ffd979;
-}
-
 .title-container {
     height: 7rem;
 }
@@ -229,10 +225,6 @@
 .btn {
     color: white;
     background-color: #9178e4;
-}
-
-#btn2:hover {
-    background-color: #ffd979;
 }
 
 .product-display {
@@ -331,14 +323,6 @@ footer.custom-footer ul li {
     color: black !important;
 }
 
-#btn2 {
-    background-color: #9178e4;
-}
-
-#btn2:hover {
-    background-color: #ffd979;
-}
-
 .btn-dark {
     background-color: #ffd979 !important;
     color: #9178e4 !important;
@@ -366,4 +350,60 @@ footer.custom-footer ul li {
     border-radius: 5px;
     text-decoration: none;
     transition: background-color 0.3s ease, transform 0.3s ease;
+}
+
+/* Anpassat från mdbootstrap.com */
+.effect {
+    text-align: center;
+    display: inline-block;
+    position: relative;
+    text-decoration: none;
+    background-color: #9178e4 !important;
+    color: #fff;
+    font-size: 18px;
+    padding: 20px 0px;
+    width: 150px;
+    border-radius: 6px;
+    overflow: hidden;
+}
+/* effect-5 arrow */
+.effect.effect-5 {
+    -webkit-transition: all 0.2s linear 0s;
+    transition: all 0.2s linear 0s;
+}
+.effect.effect-5:before {
+    content: "\f054";
+    font-family: FontAwesome, serif;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    position: absolute;
+    top: 0;
+    left: 0px;
+    height: 100%;
+    width: 30px;
+    background-color: rgba(255, 255, 255, 0.3);
+    border-radius: 0 50% 50% 0;
+    -webkit-transform: scale(0, 1);
+    transform: scale(0, 1);
+    -webkit-transform-origin: left center;
+    transform-origin: left center;
+    -webkit-transition: all 0.2s linear 0s;
+    transition: all 0.2s linear 0s;
+}
+.effect.effect-5:hover {
+    text-indent: 30px;
+    background-color: #ffd979 !important;
+
+}
+.effect.effect-5:hover:before {
+    -webkit-transform: scale(1, 1);
+    transform: scale(1, 1);
+    text-indent: 0;
 }
