--- a/css/style.css
+++ b/css/style.css
@@ -366,7 +366,7 @@ footer.custom-footer ul li {
     border-radius: 6px;
     overflow: hidden;
 }
-/* effect-5 arrow */
+/* pilen */
 .effect.effect-5 {
     -webkit-transition: all 0.2s linear 0s;
     transition: all 0.2s linear 0s;
